# ft_transcendence

./: .env_exemple  .gitignore  API-Documentation-en.md  API-Documentation-fr.md  API-Documentation.md  Makefile  README.md  gameConfig.json  geuest  out  port.cat  requirements.txt  test.py  urls_architecture.md
.zed/: settings.json
API-unittest/: launch_tests.sh  main.py  out  requirements.txt  run_tests.sh  sse.py
API-unittest/.run/: API-transcendence.run.xml
API-unittest/services/: auth.py  block.py  blocked.py  chat.py  friend.py  game.py  lobby.py  play.py  sse.py  stats.py  tournament.py  user.py
API-unittest/tests/: blocked.py  chat.py  lobby.py  play.py  test_auth.py  test_blocked.py  test_chat.py  test_friends.py  test_game.py  test_lobby.py  test_play.py  test_sse.py  test_stats.py  test_tournament.py  test_users.py  tournament.py
API-unittest/utils/: credentials.py  generate_random.py  my_unittest.py  request.py
django/: Makefile  api_test.py  models.py  requirements.txt  test.py
django/backend/: GameState.py
django/backend/api/: authentication.py  models.py  permissions.py  urls.py  views.py
django/backend/chat/: models.py
django/backend/chats/: models.py
django/backend/ft_transcendence/: settings.py  urls.py
django/backend/game/: models.py
django/backend/games/: models.py  models_static.py
django/backend/user/: models.py
django/backend/users/: admin.py  mixins.py  models.py  serializer.py  serializers.py  urls.py  validators.py  views.py
django/ft_transcendence/: ChatType.py  db.sqlite3
django/ft_transcendence/ft_transcendence/: settings.py
django/ft_transcendence/game/: models.py
django/ft_transcendence/user/: models.py
django/js_client/: client.js  guestForm.html  index.html
django/postgre_data/: postmaster.pid
django/postgre_data/global/: 1260  1262  2676  pg_control  pg_internal.init
django/postgre_data/pg_stat/: db_0.stat  db_13780.stat  db_16384.stat  global.stat
frontend/: authentication.html  homePage.html  homePage.js  index.html  script.js
launch.d/: .env_default  01generatePasswordsAndKeys.sh  01passwords.sh  02genreateSSL.sh  02set-hostname.sh  03genreateSSL.sh  utils.md
postgre_data/global/: 1260  2671  pg_control
postgre_data/pg_stat/: global.stat
srcs/: .env  Caddyfile  db.erd  db.sql  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-vps.yml  docker-compose.yml
srcs/requirements/pong-cli/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  config.json  info.md  pong-cli  requirements.txt  sse_crash.html  todo.md
srcs/requirements/pong-cli/dev/: Makefile
srcs/requirements/pong-cli/dev/srcs/: main.cpp
srcs/requirements/pong-cli/incs/: CurlWrapper.hpp  PongCLI.hpp  User.hpp  colors.h  pong-cli.h
srcs/requirements/pong-cli/init.d/: entrypoint.sh
srcs/requirements/pong-cli/srcs/: CurlWrapper.cpp  PongCLI.cpp  User.cpp  __main__.py  main.cpp  main.py  poc.py  pong-CLI.py  pongCLI.py  scratch.py  user.py
srcs/requirements/pong-cli/srcs/classes/: PongCLIApp.py  app.py  pongCLI.py  requestsWrapper.py  user.py
srcs/requirements/pong-cli/srcs/classes/game/: BallWidget.py  PaddleWidget.py  PlaygroundWidget.py
srcs/requirements/pong-cli/srcs/classes/modalScreens/: AbnormalEndModalScreen.py  CountdownModalScreen.py  GameEndModalScreen.py  GameOverModalScreen.py
srcs/requirements/pong-cli/srcs/classes/modalScreens/styles/: CountdownModalScreen.tcss  GameEnd.tcss
srcs/requirements/pong-cli/srcs/classes/pages/: GameScreen.py  LoginScreen.py  MainScreen.py
srcs/requirements/pong-cli/srcs/classes/screens/: GameScreen.py  LoginScreen.py  MainScreen.py
srcs/requirements/pong-cli/srcs/classes/screens/styles/: GamePage.tcss  LoginPage.tcss  MainPage.tcss
srcs/requirements/pong-cli/srcs/classes/utils/: config.py  user.py
srcs/requirements/pong-cli/srcs/styles/: AuthenticationPage.tcss  LoginPage.tcss  app.tcss
srcs/shared-code/: .keep  setup.py
srcs/site/: index.html
srcs/transcendence/: Dockerfile
test_api/: block.py  chat.py  credentials.py  friends.py  users.py
test_api/js_client/: index.html
(+901 files in other folders)
